<resources>
    <string name="app_name">Census</string>
    <string name="ErrorMsgAdd">Error al agregar la información.</string>
    <string name="ErrorMsgUpdate">Error al actualizar la información.</string>
    <string name="ErrorMsgRemove">Error al eliminar la información.</string>
    <string name="ErrorMsgGetAll">Error al obtener la lista de datos.</string>
    <string name="ErrorMsgGetById">Error al obtener un dato en específico.</string>
    <string name="MsgDataNoFound">El dato no fue encontrado.</string>
    <string name="btnTextPerson_main">Agregar nueva persona</string>
    <string name="TextID">* ID</string>
    <string name="TextName">* Nombre</string>
    <string name="TextFLastName">* Primer apellido</string>
    <string name="TextSLastname">* Segundo apellido</string>
    <string name="TextEmail">* Correo</string>
    <string name="TextPhone">* Teléfono</string>
    <string name="TextBirthdate">* Fecha Nacimiento</string>
    <string name="TextProvince">* Provincia</string>
    <string name="TextState">* Canton</string>
    <string name="TextDistrict">* Distrito</string>
    <string name="TextAddress">* Direcciòn</string>
    <string name="TextSave_menu">Guardar</string>
    <string name="TextDelete_menu">Eliminar</string>
    <string name="TextCancel_mnu">Cancelar</string>
    <string name="MsgDuplicateDate">No se permiten datos duplicados</string>
    <string name="MsgSaveSuccess">La información se guardó con éxito</string>
    <string name="MsgDeleteSuccess">La información se eliminó con éxito.</string>
    <string name="TextYes">Si</string>
    <string name="TextNo">No</string>
    <string name="TextTitleDialogQuestion">Pregunta...</string>
    <string name="TextSaveActionQuestion">Desea guardar la información?</string>
    <string name="TextDeleteActionQuestion">Desea eliminar la información?</string>
</resources>